[tool.poetry]
name = "uvp-interactive-web"
version = "0.1.0"
description = ""
authors = ["Gary Tyler <mail@garytyler.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.11.5"
ujson = "^2.0.3"
itsdangerous = "^1.1.0"
python-multipart = "^0.0.5"
emailvalidator = "^0.3"
aioredis = "^1.3.1"
python-slugify = "^4.0.0"
tortoise-orm = "^0.16.17"
gunicorn = "^20.0.4"
asyncpg = "^0.21.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = {version = "^20.8b1", allow-prereleases = true}
mypy = "^0.770"
pytest = "^5.4.1"
pytest-asyncio = "^0.10.0"
isort = "^4.3.21"
async-asgi-testclient = "^1.4.4"
pytest-asgi-server = "^0.2.0"
pre-commit = "^2.5.1"
randstr-plus = "^0.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
