[tool.poetry]
name = "uvp-interactive-web"
version = "0.1.0"
description = ""
authors = ["Gary Tyler <mail@garytyler.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.61.1"
uvicorn = "^0.11.5"
ujson = "^2.0.3"
itsdangerous = "^1.1.0"
python-multipart = "^0.0.5"
aioredis = "^1.3.1"
python-slugify = "^4.0.0"
tortoise-orm = { extras = ["asyncpg"], version = "^0.16.18" }
gunicorn = "^20.0.4"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-jose = { extras = ["cryptography"], version = "^3.2.0" }
email-validator = "^1.1.2"
Jinja2 = "^2.11.2"
Django = "^3.1.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = { version = "^20.8b1", allow-prereleases = true }
mypy = "^0.770"
pytest = "^6.0.0"
pytest-asyncio = "^0.14.0"
isort = "^4.3.21"
async-asgi-testclient = "^1.4.4"
pre-commit = "^2.5.1"
randstr-plus = "^0.0.1"
faker = "^4.14.2"
asynctest = "^0.13.0"
asgi-lifespan = "^1.0.1"
httpx = "0.12.1"
asyncclick = "^7.1.2"
aioconsole = "^0.3.1"
pytest-asgi-server = "^0.2.4"
docker = "^4.4.0"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["--verbose", "--capture=no"]
testpaths = ["tests"]
